# 1_sending_emails_with_python

./: Makefile  README.md  pyproject.toml
project/: forms.py  settings.py  urls.py  views.py
templates/: index.html  success.html
